--- a/css/community.css
+++ b/css/community.css
@@ -68,12 +68,13 @@
     border-radius: 5px;
     font-family: 'Exo', sans-serif;
  }
- 
- .community .info-section .card .btn:hover:not(:focus-within) {
-   transition: opacity 0.6s step-end;
-   background: var(--mainGrey);
- }
- 
+
+ @media (hover: hover) {
+   .community .info-section .card .btn:hover {
+      opacity: 0.6;
+   }
+}
+
  .community .info-section .card .btn a {
     color: var(--mainWhite);
     text-decoration: none;
