--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,12 @@ a {
    font-size: 1.2rem;
 }
 
+@media (max-width: 820px) {
+   .header-container {
+      background-position: 55% 0%;
+   }
+}
+
 @media (max-width: 600px) {
    .text-container {
       right: 25px;
