--- a/css/government.css
+++ b/css/government.css
@@ -78,6 +78,8 @@
  
  .government .cards-container .card {
     border: none;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     background: var(--mainGrey);
     margin: 50px 0px;
  }
