--- a/css/main.css
+++ b/css/main.css
@@ -118,10 +118,15 @@ a {
 @media (max-width: 820px) {
    .header-container {
       background-position: 55% 0%;
+      height: 85vh;
    }
 }
 
 @media (max-width: 600px) {
+   .header-container {
+     height: 75vh;
+   }
+  
    .text-container {
       right: 25px;
    }
