--- a/css/main.css
+++ b/css/main.css
@@ -116,11 +116,38 @@ a {
    font-size: 1.2rem;
 }
 
+@media (max-width: 1280px) {
+   .header-container {
+      height: 80vh;
+   }
+
+   .text-container {
+      top: 52%;
+   }
+}
+
+@media (max-width: 1024px) {
+   .header-container {
+      height: 70vh;
+   }
+
+   .text-container {
+      top: 48%;
+   }
+
+   .text-container h2 {
+      font-size: 2.5rem;
+   }
+}
+
 @media (max-width: 820px) {
    .header-container {
       background-position: 55% 0%;
       height: 85vh;
    }
+
+   .text-container {
+      top: 54%;
 }
 
 @media (max-width: 600px) {
