--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ a {
 }
 
 .header-container {
-   background: url('../img/bg.jpg');
+   background: url('../img/bg-2.png');
    background-position: 25% 95%;
    background-size: cover;
    background-repeat: no-repeat;
