--- a/css/main.css
+++ b/css/main.css
@@ -50,25 +50,31 @@ a {
 
 /* header */
 .header {
+   height: 75vh;
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
    clip-path: polygon(0 0,100% 0,100% 95%,50% 100%,0 95%);
    color: var(--mainWhite);
-   overflow: hidden;
 }
 
-.header-container {
-   background: url('../img/bg-2.png');
-   background-position: 25% 95%;
-   background-size: cover;
-   background-repeat: no-repeat;
-   display: flex;
-   justify-content: flex-end;
-   align-items: center;
-   height: 100vh;
-   position: relative;
+.header-container img {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   z-index: -1;
+   opacity: 0;
+   transition: opacity 0.75s ease-in-out;
 }
 
 .text-container {
    position: absolute;
+   top: 35%;
    right: 75px;
 }
 
@@ -117,31 +123,30 @@ a {
 }
 
 @media (max-width: 1280px) {
-   .header-container {
+   .header {
       height: 76vh;
    }
 }
 
 @media (max-width: 1024px) {
-   .header-container {
-      height: 86vh;
+   .header {
+      height: 68vh;
    }
 }
 
 @media (max-width: 820px) {
-   .header-container {
-      background-position: 55% 0%;
-      height: 82vh;
+   .header {
+      height: 35vh;
+   }
+
+   .text-container {
+      display: none;
    }
 }
 
 @media (max-width: 600px) {
-   .header-container {
-     height: 73vh;
-   }
-  
-   .text-container {
-      right: 25px;
+   .header {
+      height: 35vh;
    }
 
    .text-container h5 {
