--- a/css/gallery.css
+++ b/css/gallery.css
@@ -218,34 +218,23 @@
     border-radius: 5px;
  }
  
- @media(max-width: 1024px) {
-    .gallery-container {
-        width: 80%;
-    }
-    
- }
- 
  @media (max-width: 820px) {
-    .gallery .gallery-img {
-       width: calc(100% / 2);
-    }
- 
-    .gallery-background {
-       padding: 25px 0 5px 0;
-    }
- 
     .yearbook-link img {
        width: 15%;
     }
  }
  
   @media(max-width: 600px) {
-    .gallery-background {
-       padding: 25px 0 5px 0;
+    .heading-img {
+        width: 75%;
     }
+      
+    .gallery {
+       padding: 2px;
+    }
+      
     .gallery .gallery-img {
-      width: 100%;
-      padding: 4px;
+       padding: 2px;
     }
  
     .main-box.show {
